# insight-wise

./: README.md  app.py  cdk.json  cdk_app.py  cdk_stack.py  pyproject.toml  pytest.ini  requirements.txt  routes.py
.github/workflows/: python-lambda-ci.yml
lambda/: .coverage  create_item.py  delete_item.py  get_item.py  get_items.py  handler.py  handler_fastapi.py  mock_consumer.py  requirements.txt  update_item.py
lambda/shared/: __init__.py  auth.py  cloudwatch_logger.py  dynamo_utils.py  geocoding.py  mongo_utils.py  requirements.txt  validation.py
lambda/tests/: conftest.py  test_dynamo_utils.py  test_geocoding.py  test_handlers.py  test_mock_consumer.py  test_mongo_utils.py  test_validation.py
lib/: api-stack.ts
tests/: test_handler.py
